# VaultExplorer

./: README.md  pubspec.yaml
.github/workflows/: Build release .yml
android/: gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  bitlocker_deps.cmake  block_io.cpp  container_create.cpp  container_create.h  container_create_usb.cpp  container_format.h  container_header.h  container_utils.cpp  cryptbridge.cpp  ext_backend.cpp  ext_backend.h  ffconf.h  filesystem_paths.h  jni_callbacks.cpp  jni_callbacks.h  jni_runtime.cpp  ntfs_backend.cpp  ntfs_backend.h  partition_writer.h  sector_batching.h  session_guard.cpp  session_guard.h  session_prepare.cpp  session_prepare.h  vaultexplorer.cpp  volume_state.cpp  volume_state.h
android/app/src/main/cpp/containers/: container_create.h  container_header.cpp  container_utils.h  vhd_image.cpp  vhd_image.h  vhdx_image.cpp  vhdx_image.h
android/app/src/main/cpp/crypto/: cascade.cpp  cascade.h  cipher_shim.cpp  cipher_shim.h  cryfs_block_cipher.cpp  cryfs_block_cipher.h  eme.cpp  eme.h  kdf_table.cpp  keyfile_mixing.cpp  keyfile_mixing.h  luks_header.cpp  luks_header.h  scrypt.cpp  scrypt.h  siv.cpp  siv.h  thread.c  thread.h  thread_pool.h  vc_header_layout.h  xts_tweak.h
android/app/src/main/cpp/crypto/test/: kdf_table_test.cpp
android/app/src/main/cpp/dislocker/: common.c  common.h  config.c  config.h  config.priv.h  dislocker.c  encoding.c  sectors.c  virtual_io.c  virtual_io.h
android/app/src/main/cpp/filesystems/: ext_backend.cpp  ext_backend.h  fat_backend.cpp  fat_backend.h  filesystem_paths.cpp  fs_ops.cpp  fs_ops.h  ntfs_backend.cpp  ntfs_backend.h  stream_handles.h
android/app/src/main/cpp/io/: block_io.cpp  block_io.h  decrypted_block_cache.h  partition_writer.cpp  sector_batching.h  virtual_block_device.cpp  virtual_block_device.h
android/app/src/main/cpp/io/test/: sector_batching_test.cpp
android/app/src/main/cpp/jni/: container_lifecycle_bridge.cpp  crypto_bridge.cpp  filesystem_bridge.cpp  jni_bridge_common.cpp  jni_bridge_common.h  jni_callbacks.cpp  session_bridge.cpp
android/app/src/main/cpp/session/: bitlocker_backend.cpp  bitlocker_backend.h  session_guard.cpp  session_prepare.cpp  volume_state.h
android/app/src/main/cpp/test/: fs_scan_test.cpp
android/app/src/main/cpp/veracrypt/Crypto/: cpu.c
assets/images/: app_icon.png~  file_types.json
lib/: main.dart  theme.dart
lib/app/: app_bootstrap.dart  vault_explorer_app.dart
lib/core/utils/: file_type_utils.dart  filename_utils.dart  format_utils.dart  listener_registry.dart  lru_cache.dart  raw_entry.dart  validation_utils.dart
lib/core/widgets/: common_widgets.dart  container_format_icon.dart
lib/core/widgets/activity/: clipboard_activity_pill.dart  floating_activity_stack.dart  floating_pill.dart  operation_activity_pill.dart
lib/core/widgets/animation/: staggered_entrance.dart
lib/core/widgets/cards/: app_card.dart  expressive_card.dart
lib/core/widgets/crypto_forms/: advanced_params_panel.dart  keyfiles_picker.dart  (+1 more)
lib/data/models/: archive_context.dart  browser_layout_mode.dart  container_format.dart  container_sort_mode.dart  crypto_algorithms.dart  file_manager_action.dart  file_manager_toolbar_config.dart  file_operation.dart  mounted_container.dart  thumbnail_cache_mode.dart  thumbnail_quality.dart  usb_device_info.dart  vault_item.dart  vault_list_item.dart
lib/data/services/: app_cache_encryption.dart  app_secure_storage.dart  app_settings_service.dart  archive_service.dart  container_repository.dart  cross_container_clipboard.dart  file_manager_toolbar_service.dart  file_operation_service.dart  full_res_image_cache.dart  password_hasher.dart  session_lock_controller.dart  thumbnail_cache_service.dart  vault_items_service.dart
lib/features/browser/: archive_file_viewer.dart  browser_dialogs.dart  file_browser_screen.dart
lib/features/dashboard/: vault_dashboard_screen.dart
lib/features/lock/: lock_gate_screen.dart
lib/features/settings/: about_screen.dart  app_settings_screen.dart  file_manager_toolbar_settings_screen.dart
lib/features/unlock/: unlock_sheet.dart  usb_unlock_sheet.dart
lib/features/vault_item/: vault_item_detail_screen.dart  vault_item_edit_screen.dart
lib/models/: browser_layout_mode.dart  clipboard_item.dart  container_sort_mode.dart  crypto_algorithms.dart  file_manager_toolbar_config.dart  file_operation.dart  mounted_container.dart  thumbnail_cache_mode.dart  thumbnail_quality.dart  usb_device_info.dart  vault_item.dart  vault_list_item.dart
lib/screens/browser/: archive_file_viewer.dart  browser_dialogs.dart  file_browser_screen.dart  media_viewer_screen.dart
lib/screens/dashboard/: vault_dashboard.dart
lib/screens/lock/: lock_gate_screen.dart  pattern_lock_view.dart  pattern_setup_sheet.dart
lib/screens/settings/: about_screen.dart  app_settings_screen.dart  file_manager_toolbar_settings_screen.dart
lib/screens/unlock/: unlock_sheet.dart  usb_unlock_sheet.dart
lib/screens/vault/: vault_item_detail_screen.dart  vault_item_edit_screen.dart
lib/services/: app_cache_encryption.dart  app_settings_service.dart  archive_service.dart  channel_methods.dart  container_repository.dart  cross_container_clipboard.dart  cryptbridge_api.dart  file_manager_toolbar_service.dart  file_operation_service.dart  full_res_image_cache.dart  password_hasher.dart  saved_containers.dart  session_lock_controller.dart  thumbnail_cache_service.dart  vault_items_service.dart  vaultexplorer_api.dart
lib/utils/: byte_budget_cache.dart  file_type_utils.dart  filename_utils.dart  format_utils.dart  lru_cache.dart  raw_entry.dart  temp_file_utils.dart  validation_utils.dart
lib/widgets/: advanced_crypto_params_panel.dart  async_thumbnail.dart  common_widgets.dart  container_format_icon.dart  floating_activity_stack.dart  keyfile_picker_panel.dart
test/: clipboard_and_conflict_test.dart  utils_test.dart
test/core/utils/: validation_utils_test.dart
test/data/models/: container_format_test.dart
(+164 files in other folders)
