cmake_minimum_required(VERSION 3.18.0)

project("vaultexplorer")

# 1. Download mbedTLS (Encryption Engine)
include(FetchContent)
FetchContent_Declare(
        mbedtls
        GIT_REPOSITORY https://github.com/Mbed-TLS/mbedtls.git
        GIT_TAG        v3.6.0
)
set(ENABLE_TESTING OFF CACHE BOOL "Disable mbedtls tests")
set(ENABLE_PROGRAMS OFF CACHE BOOL "Disable mbedtls programs")
FetchContent_MakeAvailable(mbedtls)

# Enable ARMv8 Cryptography Extensions (hardware AES/SHA1/SHA2 instructions)
# for mbedTLS's runtime-dispatched aesce.c backend. Without this, mbedTLS
# falls back to scalar C for AES and SHA-256 on every device -- these are
# the dominant cost inside PBKDF2-HMAC during unlock, so this is the
# single biggest unlock-latency lever available. mbedTLS still
# runtime-checks CPU support (mbedtls_aesce_has_support()) before using
# these paths, so this is safe on devices/emulators without the
# extensions -- it only unlocks the *possibility* of using them.
if(ANDROID_ABI STREQUAL "arm64-v8a")
    target_compile_options(mbedcrypto PRIVATE -march=armv8-a+crypto+sha2)
elseif(ANDROID_ABI STREQUAL "armeabi-v7a")
    target_compile_options(mbedcrypto PRIVATE -march=armv8-a+crypto)
endif()

# 2. Download ChaN's FatFs (Filesystem Engine)
FetchContent_Declare(
        fatfs
        GIT_REPOSITORY https://github.com/stm32duino/FatFs.git
        GIT_TAG        4.0.4
)
FetchContent_MakeAvailable(fatfs)

# 3. Download Tuxera NTFS-3G (NTFS Filesystem Engine)
FetchContent_Declare(
        ntfs3g
        GIT_REPOSITORY https://github.com/tuxera/ntfs-3g.git
        GIT_TAG        edge
)
FetchContent_MakeAvailable(ntfs3g)

# 3a. e2fsprogs/libext2fs (ext2/ext3/ext4 filesystem engine)
#
# libext2fs is used with our own I/O manager, so it never opens or mounts an
# Android block device itself; every block passes through the VeraCrypt sector
# bridge. The project does not ship a CMake build, hence the small static
# library definition below.
FetchContent_Declare(
        e2fsprogs
        GIT_REPOSITORY https://github.com/tytso/e2fsprogs.git
        GIT_TAG        7ee1d505ef3b37831215f490411f346fe57e9053 # v1.47.4
)
FetchContent_GetProperties(e2fsprogs)
if(NOT e2fsprogs_POPULATED)
    FetchContent_Populate(e2fsprogs)
endif()
set(E2FS_SRC_DIR ${e2fsprogs_SOURCE_DIR})
set(E2FS_EXT2FS_DIR ${E2FS_SRC_DIR}/lib/ext2fs)
set(E2FS_GENERATED_DIR ${CMAKE_CURRENT_BINARY_DIR}/e2fs-generated)
file(MAKE_DIRECTORY ${E2FS_GENERATED_DIR}/ext2fs ${E2FS_GENERATED_DIR}/uuid)

# The upstream headers are normally generated by ./configure and compile_et.
# Generate the ABI-independent pieces here, preserving a FetchContent-only
# dependency flow for Android Studio/NDK builds.
set(ASM_TYPES_HEADER "")
set(SIZEOF_INT 4)
set(SIZEOF_SHORT 2)
set(SIZEOF_LONG ${CMAKE_SIZEOF_VOID_P})
set(SIZEOF_LONG_LONG 8)
set(PUBLIC_CONFIG_HEADER "")
configure_file(${E2FS_EXT2FS_DIR}/ext2_types.h.in
               ${E2FS_GENERATED_DIR}/ext2fs/ext2_types.h @ONLY)
configure_file(${E2FS_SRC_DIR}/lib/uuid/uuid.h.in
               ${E2FS_GENERATED_DIR}/uuid/uuid.h @ONLY)
set(datadir /usr/share)
set(root_sysconfdir /etc)
configure_file(${E2FS_SRC_DIR}/lib/dirpaths.h.in
               ${CMAKE_CURRENT_BINARY_DIR}/dirpaths.h @ONLY)

# ext2_err.et is a declarative error table. The numeric base is stable in the
# e2fsprogs 1.47.4 release; the generated symbols are required by libext2fs,
# while textual error descriptions are intentionally kept compact in-app.
file(READ ${E2FS_EXT2FS_DIR}/ext2_err.et.in E2FS_ERROR_TABLE)
string(REGEX MATCHALL "ec[ \t]+[A-Z0-9_]+," E2FS_ERROR_ENTRIES "${E2FS_ERROR_TABLE}")
set(E2FS_ERROR_HEADER "/* Generated from e2fsprogs ext2_err.et.in. */\n#include <et/com_err.h>\n")
set(E2FS_ERROR_INDEX 0)
foreach(E2FS_ERROR_ENTRY IN LISTS E2FS_ERROR_ENTRIES)
    string(REGEX REPLACE "ec[ \t]+([A-Z0-9_]+)," "\\1" E2FS_ERROR_NAME "${E2FS_ERROR_ENTRY}")
    math(EXPR E2FS_ERROR_VALUE "2133571328 + ${E2FS_ERROR_INDEX}")
    string(APPEND E2FS_ERROR_HEADER "#define ${E2FS_ERROR_NAME} (${E2FS_ERROR_VALUE}L)\n")
    math(EXPR E2FS_ERROR_INDEX "${E2FS_ERROR_INDEX} + 1")
endforeach()
string(APPEND E2FS_ERROR_HEADER "extern const struct error_table et_ext2_error_table;\nvoid initialize_ext2_error_table(void);\nvoid initialize_ext2_error_table_r(struct et_list **list);\n#define ERROR_TABLE_BASE_ext2 (2133571328L)\n#define init_ext2_err_tbl initialize_ext2_error_table\n#define ext2_err_base ERROR_TABLE_BASE_ext2\n")
file(WRITE ${E2FS_GENERATED_DIR}/ext2fs/ext2_err.h "${E2FS_ERROR_HEADER}")
file(WRITE ${E2FS_GENERATED_DIR}/ext2_err.c [=[
#include <stdlib.h>
#include <et/com_err.h>
static const char * const text[] = { "e2fsprogs ext2/ext3/ext4 error", 0 };
struct et_list { struct et_list *next; const struct error_table *table; };
extern struct et_list *_et_list;
const struct error_table et_ext2_error_table = { text, 2133571328L, 1 };
static struct et_list link = { 0, 0 };
void initialize_ext2_error_table_r(struct et_list **list) {
    struct et_list *et, **end;
    for (end = list, et = *list; et; end = &et->next, et = et->next)
        if (et->table->msgs == text) return;
    et = (struct et_list *) malloc(sizeof(*et));
    if (!et) { if (link.table) return; et = &link; }
    et->table = &et_ext2_error_table; et->next = 0; *end = et;
}
void initialize_ext2_error_table(void) { initialize_ext2_error_table_r(&_et_list); }
]=])

# crc32c.c normally consumes a host-generated lookup table.  The mobile
# build uses its portable bit-at-a-time path instead; it still needs the two
# declarations below because the upstream wrapper passes them to that path.
file(WRITE ${E2FS_EXT2FS_DIR}/crc32c_table.h [=[
/* Generated by VaultExplorer's Android CMake build. */
static const uint32_t crc32table_be[1][256] = {{ 0 }};
static const uint32_t crc32ctable_le[1][256] = {{ 0 }};
]=])

file(GLOB E2FS_EXT2FS_SOURCES ${E2FS_EXT2FS_DIR}/*.c)
foreach(E2FS_SOURCE IN LISTS E2FS_EXT2FS_SOURCES)
    get_filename_component(E2FS_SOURCE_NAME ${E2FS_SOURCE} NAME)
    # These are host utilities or alternate device I/O backends.  The app
    # supplies a dedicated encrypted-sector I/O manager in vaultexplorer.cpp.
    if(E2FS_SOURCE_NAME MATCHES "^(tst_|test_io|tdbtool|bmove|brel_ma|irel_ma|dosio|nt_io|windows_io|write_bb_file|imager|flushb|unix_io|finddev|getsize|getsectsize|qcow2|sparse_io|undo_io|read_bb_file|tdb|gen_crc32ctable)")
        list(REMOVE_ITEM E2FS_EXT2FS_SOURCES ${E2FS_SOURCE})
    endif()
endforeach()
add_library(e2fs_com_err STATIC
        ${E2FS_SRC_DIR}/lib/et/error_message.c
        ${E2FS_SRC_DIR}/lib/et/et_name.c
        ${E2FS_SRC_DIR}/lib/et/init_et.c
        ${E2FS_SRC_DIR}/lib/et/com_err.c
        ${E2FS_SRC_DIR}/lib/et/com_right.c)
add_library(e2fs_uuid STATIC
        ${E2FS_SRC_DIR}/lib/uuid/clear.c
        ${E2FS_SRC_DIR}/lib/uuid/compare.c
        ${E2FS_SRC_DIR}/lib/uuid/copy.c
        ${E2FS_SRC_DIR}/lib/uuid/gen_uuid.c
        ${E2FS_SRC_DIR}/lib/uuid/isnull.c
        ${E2FS_SRC_DIR}/lib/uuid/pack.c
        ${E2FS_SRC_DIR}/lib/uuid/parse.c
        ${E2FS_SRC_DIR}/lib/uuid/unpack.c
        ${E2FS_SRC_DIR}/lib/uuid/unparse.c
        ${E2FS_SRC_DIR}/lib/uuid/uuid_time.c)
add_library(e2fs_ext2fs STATIC ${E2FS_EXT2FS_SOURCES}
        ${E2FS_GENERATED_DIR}/ext2_err.c)
foreach(E2FS_TARGET e2fs_com_err e2fs_uuid e2fs_ext2fs)
    target_include_directories(${E2FS_TARGET} PRIVATE
            ${CMAKE_CURRENT_BINARY_DIR} ${E2FS_GENERATED_DIR}
            ${E2FS_SRC_DIR}/lib ${E2FS_SRC_DIR}/lib/et
            ${E2FS_SRC_DIR}/lib/uuid ${E2FS_EXT2FS_DIR})
    target_compile_definitions(${E2FS_TARGET} PRIVATE
            HAVE_CONFIG_H HAVE_SYS_TYPES_H HAVE_SYS_STAT_H HAVE_UNISTD_H
            HAVE_STDLIB_H HAVE_STRING_H HAVE_ERRNO_H HAVE_INTTYPES_H
            HAVE_SNPRINTF HAVE_STRCASECMP HAVE_STRDUP HAVE_STRNLEN
            HAVE_PREAD HAVE_PWRITE HAVE_PREAD64 HAVE_PWRITE64
            HAVE_LINUX_TYPES_H HAVE_SYS_TIME_H HAVE_GETPAGESIZE
            CRC_LE_BITS=1 CRC_BE_BITS=1 DISABLE_BACKTRACE _GNU_SOURCE)
endforeach()
target_link_libraries(e2fs_ext2fs PRIVATE e2fs_com_err e2fs_uuid)

# 3e. cJSON (lightweight JSON parser for LUKS2 metadata)
FetchContent_Declare(
        cjson
        GIT_REPOSITORY https://github.com/DaveGamble/cJSON.git
        GIT_TAG        v1.7.18
)
set(ENABLE_CJSON_TEST OFF CACHE BOOL "Disable cJSON tests")
set(BUILD_SHARED_AND_STATIC_LIBS OFF CACHE BOOL "Build only static cJSON")
set(BUILD_SHARED_LIBS OFF CACHE BOOL "Disable shared cJSON")
FetchContent_MakeAvailable(cjson)

# 3b. Generate a robust config.h to compile ntfs-3g natively on Android NDK
set(CONFIG_H_CONTENT "
#ifndef CONFIG_H
#define CONFIG_H

#define HAVE_MALLOC 1
#define HAVE_REALLOC 1
#define HAVE_MEMSET 1
#define HAVE_MEMMOVE 1
#define HAVE_STRDUP 1
#define HAVE_STRCHR 1
#define HAVE_STRTOL 1
#define HAVE_STRTOULL 1
#define HAVE_GETTIMEOFDAY 1
#define HAVE_SYS_TIME_H 1
#define HAVE_SYS_STAT_H 1
#define HAVE_SYS_TYPES_H 1
#define HAVE_UNISTD_H 1
#define HAVE_FCNTL_H 1
#define HAVE_ERRNO_H 1
#define HAVE_STRING_H 1
#define HAVE_STDLIB_H 1
#define HAVE_STDIO_H 1
#define HAVE_LIMITS_H 1
#define HAVE_GETOPT_H 1
#define HAVE_STDARG_H 1
#define HAVE_WCHAR_H 1
#define HAVE_WCTYPE_H 1
#define HAVE_LOCALE_H 1
#define HAVE_UTIMENSAT 1
#define HAVE_SYS_SYSMACROS_H 1
#define HAVE_TIME_H 1
#define HAVE_CTYPE_H 1
#define HAVE_FFS 1

// Include system macros so makedev, major, and minor are fully declared
#ifdef HAVE_SYS_SYSMACROS_H
#include <sys/sysmacros.h>
#endif

// Bionic major/minor/makedev fallbacks
#ifndef major
#define major(dev) ((int)(((dev) >> 8) & 0xff))
#endif
#ifndef minor
#define minor(dev) ((int)((dev) & 0xff))
#endif
#ifndef makedev
#define makedev(maj, min) ( (((maj) & 0xfffff000ULL) << 32) | (((maj) & 0xfffULL) << 8) | (((min) & 0xfffff000ULL) << 12) | ((min) & 0xfffULL) )
#endif

// Bionic hd_geometry fallback
#ifndef HDIO_GETGEO
#define HDIO_GETGEO 0x301
#endif

struct hd_geometry {
    unsigned char heads;
    unsigned char sectors;
    unsigned short cylinders;
    unsigned long start;
};

#endif
")
file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/config.h "${CONFIG_H_CONTENT}")

# 3c. VeraCrypt crypto primitives
#
# Keep this source outside the application tree and pin it to a reviewed
# release.  The app only compiles the small C subset listed below; it does not
# build VeraCrypt itself.
FetchContent_Declare(
        veracrypt
        GIT_REPOSITORY https://github.com/veracrypt/VeraCrypt.git
        GIT_TAG        d26216c294fdfb090ee856f6195c294176defa1d # VeraCrypt_1.26.29
)
FetchContent_GetProperties(veracrypt)
if(NOT veracrypt_POPULATED)
    FetchContent_Populate(veracrypt)
endif()

set(VC_SRC_DIR ${veracrypt_SOURCE_DIR}/src)
set(VC_CRYPTO_DIR ${VC_SRC_DIR}/Crypto)
set(VC_COMMON_DIR ${VC_SRC_DIR}/Common)
set(VC_ARGON2_DIR ${VC_CRYPTO_DIR}/Argon2)
# VeraCrypt 1.26.29 declares the Android ARM feature probes as plain `inline`
# C functions. Clang's modern C inline semantics otherwise omit their emitted
# definitions, leaving cpu.c with unresolved references at link time.
set_source_files_properties(${VC_CRYPTO_DIR}/cpu.c PROPERTIES
        COMPILE_OPTIONS "-fgnu89-inline")

# 3d. Complete NTFS-3G Source Files list
set(NTFS_3G_SRC_DIR ${ntfs3g_SOURCE_DIR}/libntfs-3g)
set(NTFS_3G_SOURCES
    ${NTFS_3G_SRC_DIR}/acls.c
    ${NTFS_3G_SRC_DIR}/attrib.c
    ${NTFS_3G_SRC_DIR}/attrlist.c
    ${NTFS_3G_SRC_DIR}/bitmap.c
    ${NTFS_3G_SRC_DIR}/bootsect.c
    ${NTFS_3G_SRC_DIR}/cache.c          
    ${NTFS_3G_SRC_DIR}/collate.c
    ${NTFS_3G_SRC_DIR}/compat.c
    ${NTFS_3G_SRC_DIR}/compress.c
    ${NTFS_3G_SRC_DIR}/debug.c
    ${NTFS_3G_SRC_DIR}/device.c
    ${NTFS_3G_SRC_DIR}/dir.c
    ${NTFS_3G_SRC_DIR}/ea.c             
    ${NTFS_3G_SRC_DIR}/efs.c            
    ${NTFS_3G_SRC_DIR}/index.c
    ${NTFS_3G_SRC_DIR}/inode.c
    ${NTFS_3G_SRC_DIR}/lcnalloc.c
    ${NTFS_3G_SRC_DIR}/logfile.c
    ${NTFS_3G_SRC_DIR}/logging.c
    ${NTFS_3G_SRC_DIR}/mft.c
    ${NTFS_3G_SRC_DIR}/misc.c
    ${NTFS_3G_SRC_DIR}/mst.c
    ${NTFS_3G_SRC_DIR}/object_id.c      
    ${NTFS_3G_SRC_DIR}/reparse.c
    ${NTFS_3G_SRC_DIR}/runlist.c
    ${NTFS_3G_SRC_DIR}/security.c
    ${NTFS_3G_SRC_DIR}/unistr.c
    ${NTFS_3G_SRC_DIR}/volume.c
    ${NTFS_3G_SRC_DIR}/unix_io.c
    ${NTFS_3G_SRC_DIR}/xattrs.c         
    # mkntfs formatter support (GPL-2.0-or-later, compatible with this GPLv3 app)
    ${ntfs3g_SOURCE_DIR}/ntfsprogs/attrdef.c
    ${ntfs3g_SOURCE_DIR}/ntfsprogs/boot.c
    ${ntfs3g_SOURCE_DIR}/ntfsprogs/cluster.c
    ${ntfs3g_SOURCE_DIR}/ntfsprogs/sd.c
    ${ntfs3g_SOURCE_DIR}/ntfsprogs/utils.c
)

# Embed mkntfs with a renamed entry point and route its device I/O through the
# encrypted virtual device exported by vaultexplorer.cpp.
set(MKNTFS_EMBEDDED_SOURCE ${CMAKE_CURRENT_BINARY_DIR}/mkntfs_embedded.c)
file(WRITE ${MKNTFS_EMBEDDED_SOURCE}
"#include <ntfs-3g/device.h>\nextern struct ntfs_device_operations vExplorer_ntfs_ops;\n#undef ntfs_device_default_io_ops\n#define ntfs_device_default_io_ops vExplorer_ntfs_ops\n#define VERSION \"embedded\"\n#define main vaultexplorer_mkntfs_main\n#include \"${ntfs3g_SOURCE_DIR}/ntfsprogs/mkntfs.c\"\n")

# 4. Build target: FatFs + original code + VeraCrypt crypto primitives + NTFS-3G
add_library(
        vaultexplorer
        SHARED
        vaultexplorer.cpp
        session_prepare.cpp        # VeraCrypt/LUKS session establishment (Tier-1 JNI calls)
        container_create.cpp       # new-container header/format creation (createContainerNative)
        jni_runtime.cpp
        jni_callbacks.cpp
        block_io.cpp
        partition_writer.cpp
        container_create_usb.cpp
        volume_state.cpp
        ext_backend.cpp
        fat_backend.cpp
        filesystem_paths.cpp
        ntfs_backend.cpp
        session_guard.cpp
        container_header.cpp
        container_utils.cpp
        crypto/cipher_shim.cpp     # adapter
        crypto/cascade.cpp         # cipher-agnostic XTS + cascade chaining
        crypto/kdf_table.cpp       # per-hash iteration-count table + hash dispatch + PIM clamping
        crypto/luks_header.cpp     # LUKS header parsing & key recovery
        ${fatfs_SOURCE_DIR}/src/ff.c
        ${fatfs_SOURCE_DIR}/src/ffunicode.c
        # ── VeraCrypt primitives (pinned FetchContent source) ──
        ${VC_CRYPTO_DIR}/Twofish.c
        ${VC_CRYPTO_DIR}/Serpent.c
        ${VC_CRYPTO_DIR}/Camellia.c
        ${VC_CRYPTO_DIR}/kuznyechik.c
        ${VC_CRYPTO_DIR}/Whirlpool.c
        ${VC_CRYPTO_DIR}/Streebog.c
        ${VC_CRYPTO_DIR}/blake2s.c
        ${VC_CRYPTO_DIR}/cpu.c
        ${VC_COMMON_DIR}/Endian.c
        ${VC_ARGON2_DIR}/src/argon2.c
        ${VC_ARGON2_DIR}/src/core.c
        ${VC_ARGON2_DIR}/src/ref.c
        ${VC_ARGON2_DIR}/src/opt_sse2.c
        ${VC_ARGON2_DIR}/src/opt_avx2.c
        ${VC_ARGON2_DIR}/src/blake2/blake2b.c
        crypto/thread.c 
        # ── NTFS-3G Sources ──
        ${NTFS_3G_SOURCES}
        ${MKNTFS_EMBEDDED_SOURCE}
)

# Force core.c to include your local thread.h at compile time without modifying core.c on disk
set_source_files_properties(${VC_ARGON2_DIR}/src/core.c
        TARGET_DIRECTORY vaultexplorer
        PROPERTIES COMPILE_OPTIONS "-include;${CMAKE_CURRENT_SOURCE_DIR}/crypto/thread.h")

target_compile_definitions(vaultexplorer PRIVATE
        CRYPTOPP_DISABLE_ASM
        CRYPTOPP_DISABLE_SSE2
        CRYPTOPP_DISABLE_SSSE3
        # We use mbedTLS for SHA-2. This also prevents VeraCrypt cpu.c from
        # referencing its SHA-NI self-test, which is not compiled when ASM is
        # disabled (notably on Android x86_64).
        CRYPTOPP_DISABLE_SHANI
        HAVE_CONFIG_H  # Forces NTFS-3G files to look up our generated config.h
        _GNU_SOURCE
        _FILE_OFFSET_BITS=64
)

# 5. Header search paths
target_include_directories(
        vaultexplorer PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMAKE_CURRENT_SOURCE_DIR}/crypto
        ${mbedtls_SOURCE_DIR}/include
        ${fatfs_SOURCE_DIR}/src
        ${ntfs3g_SOURCE_DIR}/include
        ${ntfs3g_SOURCE_DIR}/include/ntfs-3g
        ${ntfs3g_SOURCE_DIR}/ntfsprogs
        ${CMAKE_CURRENT_BINARY_DIR} # config.h location
        ${VC_CRYPTO_DIR}
        ${VC_SRC_DIR}
        ${VC_ARGON2_DIR}/include
        ${VC_ARGON2_DIR}/src
        ${E2FS_GENERATED_DIR}
        ${E2FS_SRC_DIR}/lib
        ${E2FS_EXT2FS_DIR}
        ${cjson_SOURCE_DIR}
)

find_library(log-lib log)

target_link_libraries(
        vaultexplorer
        ${log-lib}
        mbedcrypto
        e2fs_ext2fs
        e2fs_com_err
        e2fs_uuid
        cjson)                  

if(NOT ANDROID)
    add_executable(sector_batching_test test/sector_batching_test.cpp)
    add_executable(fs_scan_test test/fs_scan_test.cpp)
    add_executable(cascade_test test/cascade_test.cpp crypto/cascade.cpp crypto/cipher_shim.cpp
                    ${VC_CRYPTO_DIR}/Twofish.c ${VC_CRYPTO_DIR}/Serpent.c
                    ${VC_CRYPTO_DIR}/Camellia.c ${VC_CRYPTO_DIR}/kuznyechik.c
                    ${VC_CRYPTO_DIR}/cpu.c ${VC_COMMON_DIR}/Endian.c
                    ${VC_ARGON2_DIR}/src/argon2.c ${VC_ARGON2_DIR}/src/core.c
                    ${VC_ARGON2_DIR}/src/ref.c ${VC_ARGON2_DIR}/src/opt_sse2.c
                    ${VC_ARGON2_DIR}/src/opt_avx2.c ${VC_ARGON2_DIR}/src/blake2/blake2b.c)
    add_executable(kdf_table_test crypto/test/kdf_table_test.cpp crypto/kdf_table.cpp)
    enable_testing()
    add_test(NAME sector_batching_test COMMAND sector_batching_test)
    add_test(NAME fs_scan_test COMMAND fs_scan_test)
    add_test(NAME cascade_test COMMAND cascade_test)
    add_test(NAME kdf_table_test COMMAND kdf_table_test)
endif()